[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbgsom"
version = "0.1.1"
authors = [
  { name="Sandro Martens", email="Sandro.martens@web.de" },
]
description = "A directed batch growing self organizing map"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SandroMartens/DBGSOM"
"Docmentation" = "https://dbgsom.readthedocs.io/en/latest/"