[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DBGSOM"
authors = [
  { name="Sandro Martens", email="sandro.martens@web.de" },
]
description = "A Python implementation of the Directed Batch Growing Self-Organizing Map"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies", "license", "version"]

[project.urls]
"Homepage" = "https://github.com/SandroMartens/DBGSOM"
"Docmentation" = "https://dbgsom.readthedocs.io/en/latest/"

